avcodecmap: Add more and correct restrictions for DV

https://bugzilla.gnome.org/show_bug.cgi?id=600895